--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name"        : "eslogger",
-  "description" : "Elasticsearch Logging for mirus under node.js",
+  "description" : "Elasticsearch js client wrapper with daily indexes (ala logstash) using buffers and bulk inserts for efficiency",
   "main"        : "./lib/eslogger",
   "author"      : {
     "name": "A Hughes"
@@ -8,12 +8,12 @@
   "version"      : "0.1.4",
   "homepage"     : "https://bitbucket.org/mirusresearch/eslogger",
   "dependencies" : {
-    "async"         : "*",
-    "elasticsearch" : "*",
-    "ipaddr.js"     : "*",
-    "lodash"        : "*",
-    "querystring"   : "*",
-    "request"       : "*",
-    "useragent"     : "*"
+    "async"         : "^1.3.0",
+    "elasticsearch" : "^5.0.0",
+    "ipaddr.js"     : "^1.0.1",
+    "lodash"        : "^3.10.0",
+    "querystring"   : "^0.2.0",
+    "request"       : "^2.58.0",
+    "useragent"     : "^2.1.7"
   }
 }
