--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
   },
   "version"      : "0.1.4",
   "homepage"     : "https://bitbucket.org/mirusresearch/eslogger",
+  "repository"   : "https://bitbucket.org/mirusresearch/eslogger",
   "dependencies" : {
     "async"         : "^1.3.0",
     "elasticsearch" : "^5.0.0",
     "ipaddr.js"     : "^1.0.1",
     "lodash"        : "^3.10.0",
-    "querystring"   : "^0.2.0",
     "request"       : "^2.58.0",
     "useragent"     : "^2.1.7"
   }
