--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "author"      : {
     "name": "A Hughes"
   },
-  "version"      : "0.1.8",
+  "version"      : "0.1.9",
   "homepage"     : "https://github.com/mirusresearch/eslogger",
-  "repository"   : "https://githum.com/mirusresearch/eslogger",
+  "repository"   : "https://githuB.com/mirusresearch/eslogger",
   "dependencies" : {
     "async"         : "^1.3.0",
     "elasticsearch" : "^5.0.0",
